# Integrity-Guard-Forensics

./: .gitignore  CITATION.cff  E156-PROTOCOL.md  README.md  advanced_dashboard.html  audit_dashboard.html  deep_dashboard.html  forensic_dashboard.html  full_registry_scan.jsonl  inquiry_NCT02978326.md  letter_to_editor.md  massive_fraud_leads.jsonl  push.sh  pyproject.toml  red_flag_dashboard.html  report.html  report.json  report_final.json  review-findings.md
.tmp.driveupload/: 361578  361586  363813  363817  363821  363825  99391  99395  99399  99401  99405  99409  99413  99415  99419  99423  99427  99431  99435  99439  99443  99445  99449  99453  99457  99461  99465  99469  99473  99477  99481  99485  99489  99493  99497  99501  99505  99509  99513  99517  (+30 more)
data/: advanced_red_flag_bundle.json  deep_fraud_bundle.json  forensic_fraud_bundle.json  red_flag_bundle.json  sample_bundle.json
docs/: benchmark-sheet.md
docs/superpowers/plans/: 2026-04-01-fraud-pattern-atlas.md
e156-submission/: config.json  paper.json
src/: __init__.py  ai_reviewer.py  author_auditor.py  baseline_balance_engine.py  clinical_synonyms.py  ct_history_fetcher.py  discrepancy_engine.py  fraud_lead_generator.py  html_reporter.py  inquiry_generator.py  linguistic_forensics.py  main.py  mass_scanner.py  openclaw_pipeline.py  p_curve_analyzer.py  plausibility_engine.py  review_tool.py  rob_mapper.py  scientific_integrity_forensics.py  stats_utils.py  truthcert_builder.py  utils.py
tests/: test_fraud_gauntlet.py  test_historical_validation.py  test_integrity_guard.py  test_portability_contracts.py
